@@ -1,3 +1,7 @@
+2007-04-13  Kouhei Sutou  <kou@cozmixng.org>
+
+	* extconf.rb, Rakefile: supported RubyGems.
+
 2007-04-08  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo_surface.c (yield_and_finish):
